# mikrograd

./: Cargo.toml  LICENSE  README.md
examples/: moons.rs
src/: lib.rs  modules.rs  value.rs
tests/unit/: modules_test.rs  value_test.rs
